--- a/scc-mvc/src/main/resources/templates/page/403.html
+++ b/scc-mvc/src/main/resources/templates/page/403.html
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body>
- <h1 style="text-align: center">You are not have permission for this action </h1>
+ <h1 style="text-align: center">You do not have permission for this action </h1>
 <h1 style="text-align: center">Please contact your Supervisor or Brand Manager</h1>
 </body>
 </html>
