--- a/scc-mvc/src/main/resources/templates/page/index.html
+++ b/scc-mvc/src/main/resources/templates/page/index.html
@@ -86,7 +86,7 @@
 
                                         <div id="fbLoginButton" style="visibility: hidden">
 
-                                            <fb:login-button scope="public_profile,email,manage_pages,publish_actions,publish_pages" onlogin="checkLoginState();">
+                                            <fb:login-button scope="pages_messaging,public_profile,email,manage_pages,publish_actions,publish_pages" onlogin="checkLoginState();">
                                             </fb:login-button>
                                         </div>
 
@@ -159,7 +159,7 @@
 
     window.fbAsyncInit = function () {
         FB.init({
-            appId: '341786092825787',
+            appId: '1151926771557379',
             cookie: true,  // enable cookies to allow the server to access
                            // the session
             xfbml: true,  // parse social plugins on this page
